--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,25 +1,37 @@
-table {
-  box-shadow: 2px 2px 2px 2px hsla(0, 0%, 0%, 0.2);
-  margin: 3rem;
-  font-family: sans-serif;
-  border-collapse: collapse;
-}
-caption {
-  font-size: 20px;
-  margin-bottom: 1rem;
-}
-thead {
-  background-color: #555;
-  color: #fff;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-td,
-th {
-  padding: 0.5rem 1rem;
-  border: 1px solid #888;
-  text-align: center;
+.box-1 {
+  width: 180px;
+  height: 80px;
+  background-color: #f44336;
+
+  /*  The value can be pixels  */
+  border-radius: 20px;
 }
 
-td[colspan] {
-  background-color: #eee;
+.box-2 {
+  width: 120px;
+  height: 120px;
+  background-color: #2196f3;
+
+  /*  The value can be percent  */
+  border-radius: 20%;
+}
+
+.box-3 {
+  width: 150px;
+  height: 150px;
+  background-color: #4caf50;
+
+  /*  If the block is a square, settings the radius to 50% will transform it to a circle  */
+  border-radius: 100%;
+}
+
+.box-1,
+.box-2 {
+  margin-bottom: 20px;
 }
